--- a/portfolio-site/index.html
+++ b/portfolio-site/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Bhargav Limbasia • Data Science & AI</title>
-  <meta name="description" content="Portfolio of Bhargav Limbasia – Applied Data Science, ML/DL, NLP, Medical Imaging." />
+  <title>BL • Bhargav Limbasia - ML Engineer & Researcher</title>
+  <meta name="description" content="Portfolio of Bhargav Limbasia – ML Engineer & Researcher specializing in Healthcare AI, Robotics, and Production ML Systems." />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-  <link rel="icon" type="image/png" href="/favicon.png" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 </head>
 <body class="bg-gradient-to-tr from-slate-950 via-slate-900 to-slate-800 text-slate-100 font-[Inter] min-h-screen overflow-x-hidden">
   <noscript>
